--- a/index&fetch.html
+++ b/index&fetch.html
@@ -15,7 +15,7 @@
             text-align: center;
         }
         p{
-            border: 1px solid blue;
+            border: 1px solid rgb(255, 0, 225);
         }
         header{
             height: 25%;
